Bug 124055 - The "Idle document - please click to reload and resume editing" thing makes no sense in a mobile app
Summary: The "Idle document - please click to reload and resume editing" thing makes n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-13 12:30 UTC by How can I remove my account?
Modified: 2019-03-21 12:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2019-03-13 12:30:36 UTC
Description:
That stuff should not be done if windows.ThisIsAMobileApp.

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
.
Comment 1 How can I remove my account? 2019-03-13 12:35:30 UTC
and it even seems to cause the app to crash:

EXC_BAD_ACCESS at:

> #0	0x0000000102389f90 in SfxItemPool::GetFrozenIdRanges() const at /Volumes/TML13/lo/ios-optimised-cp-6.0/svl/source/items/itempool.cxx:855
> #1	0x000000010238ecac in SfxItemSet::~SfxItemSet() at /Volumes/TML13/lo/ios-optimised-cp-6.0/svl/source/items/itemset.cxx:245
> #2	0x000000010238ed5c in SfxItemSet::~SfxItemSet() [inlined] at /Volumes/TML13/lo/ios-optimised-cp-6.0/svl/source/items/itemset.cxx:222
> #3	0x000000010238ed58 in SfxItemSet::~SfxItemSet() at /Volumes/TML13/lo/ios-optimised-cp-6.0/svl/source/items/itemset.cxx:222
> #4	0x00000001020fb034 in SfxTabDialog::dispose() at /Volumes/TML13/lo/ios-optimised-cp-6.0/sfx2/source/dialog/tabdlg.cxx:376
> #5	0x0000000101ec8a64 in VclPtr<vcl::Window>::disposeAndClear() at /Volumes/TML13/lo/ios-optimised-cp-6.0/include/vcl/vclptr.hxx:208
> #6	0x00000001034a2378 in vcl::LazyDeletor::~LazyDeletor() at /Volumes/TML13/lo/ios-optimised-cp-6.0/include/vcl/lazydelete.hxx:148
> #7	0x00000001034a1ef8 in vcl::LazyDeletor::~LazyDeletor() [inlined] at /Volumes/TML13/lo/ios-optimised-cp-6.0/include/vcl/lazydelete.hxx:122
> #8	0x00000001034a1ef4 in vcl::LazyDeletor::~LazyDeletor() at /Volumes/TML13/lo/ios-optimised-cp-6.0/include/vcl/lazydelete.hxx:122
> #9	0x000000010383a038 in vcl::LazyDelete::flush() at /Volumes/TML13/lo/ios-optimised-cp-6.0/vcl/source/helper/lazydelete.cxx:52
> #10	0x0000000103855814 in ImplYield(bool, bool) at /Volumes/TML13/lo/ios-optimised-cp-6.0/vcl/source/app/svapp.cxx:478
> #11	0x00000001038555d0 in Application::Execute() at /Volumes/TML13/lo/ios-optimised-cp-6.0/vcl/source/app/svapp.cxx:449
> #12	0x0000000102278278 in desktop::Desktop::Main() at /Volumes/TML13/lo/ios-optimised-cp-6.0/desktop/source/app/app.cxx:1642
> #13	0x0000000103859ee0 in ImplSVMain() at /Volumes/TML13/lo/ios-optimised-cp-6.0/vcl/source/app/svmain.cxx:281
> #14	0x000000010385af50 in SVMain() at /Volumes/TML13/lo/ios-optimised-cp-6.0/vcl/source/app/svmain.cxx:319
> #15	0x0000000102289df8 in ::soffice_main() at /Volumes/TML13/lo/ios-optimised-cp-6.0/desktop/source/app/sofficemain.cxx:167
> #16	0x00000001022a9a5c in lo_startmain(void*) at /Volumes/TML13/lo/ios-optimised-cp-6.0/desktop/source/lib/init.cxx:4360
> #17	0x00000001032c6e98 in osl_thread_start_Impl(void*) at /Volumes/TML13/lo/ios-optimised-cp-6.0/sal/osl/unx/thread.cxx:234
Comment 2 Commit Notification 2019-03-21 12:42:43 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/+/c459ad77a1f278dc51d947f6b2a5fa559f279612%5E%21

tdf#124055: Idle timeout is pointless in mobile apps