tdf#124055: Idle timeout is pointless in mobile apps

We don't want to unload the document and show any "Idle document -
please click to reload and resume editing" overlay.

What the iOS (and presumably Android) app *would* need, though, is
proper restore functionality. I.e. if you have a document open, and
the app is put in the background (i.e. the user does something else),
and the OS kills it (as is perfectly normal for iOS or Android to do
to idle background apps), then when the user returs to the app, it
should reopen the same document and restore the view location and zoom
level.